Fixed photo alignments for homepage and swatch photos

--- a/wp-content/themes/chasing-victory/less/style.less
+++ b/wp-content/themes/chasing-victory/less/style.less
@@ -263,10 +263,12 @@ body.page-id-33 {
 	float: left;
 	width: 100px;
 	margin: 0 15px;
+	height: 153px;
 }
 
 .swatch-title {
 	margin: 5px 0 10px;
+	text-align: center;
 }
 
 /*..................................the FAQ page */
@@ -326,6 +328,8 @@ body.page-id-33 {
 
 .catalog-item {
 	margin-top: 30px;
+	height: 247px;
+
 
 	h3 {
 		height: 30px;
